--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,18 +13,33 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
-      - run: go build -o go-web-app
-      - run: go test ./...
+          go-version: 1.22
+
+      - name: Build
+        run: go build -o go-web-app
+
+      - name: Test
+        run: go test ./...
 
   code-quality:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: golangci/golangci-lint-action@v6
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.22
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
         with:
           version: v1.60.1
 
@@ -32,12 +47,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Install Helm
         run: |
           curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+
       - name: Lint Helm chart
         run: helm lint helm/go-web-app-chart
+
       - name: Validate Helm templates
         run: helm template go-web-app helm/go-web-app-chart --values helm/go-web-app-chart/values.yaml
 
@@ -45,13 +64,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, helm-validate]
     steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Docker login
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: docker/build-push-action@v6
+
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
@@ -62,11 +88,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: push
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           token: ${{ secrets.TOKEN }}
-      - run: |
-          sed -i "s/tag: .*/tag: ${GITHUB_RUN_ID}/" helm/go-web-app-chart/values.yaml
+
+      - name: Update Helm chart with new image tag
+        run: |
+          sed -i "s/tag: .*/tag: ${{ github.run_id }}/" helm/go-web-app-chart/values.yaml
           git config --global user.email "felixoppong2000@yahoo.com"
           git config --global user.name "felixopk"
           git add helm/go-web-app-chart/values.yaml
