--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,7 +103,8 @@ jobs:
       - name: Update Helm chart with new image tag
         run: |
           echo "Updating Helm chart with new image tag: ${{ github.run_id }}"
-          sed -i "s/tag: .*/tag: \"${{ github.run_id }}\"/" helm/go-web-app-chart/values.yaml
+          sed -i 's/^tag:.*$/tag: "'"${GITHUB_RUN_ID}"'"/' helm/go-web-app-chart/values.yaml
+
 
           git config --global user.email "felixoppong2000@yahoo.com"
           git config --global user.name "felixopk"
